# Auto-Video-Platform-

./: .gitignore  README.md  pyproject.toml
api/: deps.py  main.py
api/routers/v1/: assets.py  auth.py  intake.py  script.py
api/schemas/: assets.py  auth.py  intake.py  script.py
apps/assets/: models.py  service.py
apps/core/: user_service.py
apps/intake/: models.py  service.py
apps/script/: models.py  service.py
config/: logging.py  settings.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
docs/: architecture.md
domain/models/: user.py
infrastructure/auth/: security.py
infrastructure/db/: base.py  session.py
infrastructure/storage/: minio_client.py
scripts/: worker.py
workflows/: campaign.py
workflows/workers/: worker.py
